--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
                     </div><!-- .navbar-header -->
                     <div class="collapse navbar-collapse navbar-ex1-collapse"><ul id="menu-livres-interactifs" class="primary-menu"><li id="menu-item-475" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children menu-item-475"><a href="Tout categorie de cours.html">Cours et documents</a>
         <ul class="sub-menu">
-            <li id="menu-item-559" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-559"><a href="Aceuil01.html">Formation JSP Année 1</a></li>
+            <li id="menu-item-559" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-559"><a href="/Aceuil01.html">Formation JSP Année 1</a></li>
             <li id="menu-item-576" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-576"><a href="JSP 2/Acceuil.html">Formation JSP Année 2</a></li>
             <li id="menu-item-582" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-582"><a href="JSP 3/Acceuil.html">Formation JSP Année 3</a></li>
             <li id="menu-item-590" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-590"><a href="JSP 4/Acceuil.html">Formation JSP Année 4</a></li>
